make home page "Austin Sustainability" header same size as subsection headers for consistency, and also avoids over-running on smaller-medium size screens

--- a/app/styles/includes/_base.scss
+++ b/app/styles/includes/_base.scss
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .about, .content {
-  h2, h3 {
+  h1, h2, h3 {
     font-size: 2.3em;
     min-height: 2.3em;
     margin-top: 1em;
